@@ -11,10 +11,13 @@ define( function( require ) {
   'use strict';
 
   // imports
+  var ExpandCollapseBar = require( 'PH_SCALE/common/view/ExpandCollapseBar' );
+  var ExpandCollapseButton = require( 'SUN/ExpandCollapseButton' );
   var inherit = require( 'PHET_CORE/inherit' );
   var Node = require( 'SCENERY/nodes/Node' );
   var PhetFont = require( 'SCENERY_PHET/PhetFont' );
   var PHScaleConstants = require( 'PH_SCALE/common/PHScaleConstants' );
+  var Property = require( 'AXON/Property' );
   var Rectangle = require( 'SCENERY/nodes/Rectangle' );
   var Text = require( 'SCENERY/nodes/Text' );
   var Util = require( 'DOT/Util' );
@@ -24,15 +27,18 @@ define( function( require ) {
   var stringNoValue = '-';
 
   // constants
-  var ENABLED_COLOR = 'rgb(135,19,70)';
-  var DISABLED_COLOR = 'rgb(178,178,178)';
+  var DISPLAY_COLOR = 'rgb(135,19,70)';
+  var DISPLAY_X_MARGIN = 14;
+  var DISPLAY_Y_MARGIN = 10;
+  var DISPLAY_CORNER_RADIUS = 12;
+  var PH_LABEL_FONT = new PhetFont( { size: 28, weight: 'bold' } );
 
   /**
    * @param {Property<Number>} pHProperty
-   * @param {Property<Boolean>} enabledProperty optional
+   * @param {Property<Boolean>} expandedProperty optional
    * @constructor
    */
-  function CustomPHMeterNode( pHProperty, enabledProperty ) {
+  function MeterNode( pHProperty, expandedProperty ) {
 
     var thisNode = this;
     Node.call( thisNode );
@@ -49,31 +55,34 @@ define( function( require ) {
       { fill: 'white' } );
 
     // label above the value
-    var labelNode = new Text( pHString,
-      { fill: 'white', font: new PhetFont( { size: 28, weight: 'bold' } ) } );
+    var labelNode = new Text( pHString, { fill: 'white', font: PH_LABEL_FONT } );
 
     // background
-    var backgroundXMargin = 14;
-    var backgroundYMargin = 10;
     var backgroundYSpacing = 6;
-    var backgroundWidth = Math.max( labelNode.width, valueRectangle.width ) + ( 2 * backgroundXMargin );
-    var backgroundHeight = labelNode.height + valueRectangle.height + backgroundYSpacing + ( 2 * backgroundYMargin );
+    var backgroundWidth = Math.max( labelNode.width, valueRectangle.width ) + ( 2 * DISPLAY_X_MARGIN );
+    var backgroundHeight = labelNode.height + valueRectangle.height + backgroundYSpacing + ( 2 * DISPLAY_Y_MARGIN );
     var backgroundRectangle = new Rectangle( 0, 0, backgroundWidth, backgroundHeight, cornerRadius, cornerRadius,
-      { fill: ENABLED_COLOR } );
+      { fill: DISPLAY_COLOR } );
+
+    // expand/collapse button
+    var expandCollapseButton = new ExpandCollapseButton( PHScaleConstants.EXPAND_COLLAPSE_BUTTON_LENGTH, expandedProperty );
 
     // rendering order
     thisNode.addChild( backgroundRectangle );
     thisNode.addChild( valueRectangle );
     thisNode.addChild( labelNode );
+    thisNode.addChild( expandCollapseButton );
     thisNode.addChild( valueNode );
 
     // layout
-    labelNode.top = backgroundRectangle.top + backgroundYMargin;
+    labelNode.top = backgroundRectangle.top + DISPLAY_Y_MARGIN;
     valueRectangle.centerX = backgroundRectangle.centerX;
     labelNode.left = valueRectangle.left;
     valueRectangle.top = labelNode.bottom + backgroundYSpacing;
     valueNode.right = valueRectangle.right - valueXMargin; // right justified
     valueNode.centerY = valueRectangle.centerY;
+    expandCollapseButton.centerY = labelNode.centerY;
+    expandCollapseButton.right = valueRectangle.right;
 
     // pH value
     pHProperty.link( function( pH ) {
@@ -86,12 +95,45 @@ define( function( require ) {
         valueNode.right = valueRectangle.right - valueXMargin; // right justified
       }
     } );
+  }
+  
+  inherit( Node, MeterNode );
 
-    if ( enabledProperty ) {
-      enabledProperty.link( function( enabled ) {
-        backgroundRectangle.fill = enabled ? ENABLED_COLOR : DISABLED_COLOR;
+  /**
+   * @param {Property<Number>} pHProperty
+   * @param {*} options
+   * @constructor
+   */
+  function CustomPHMeterNode( pHProperty, options ) {
+
+    options = _.extend( { expanded: true }, options );
+
+    var thisNode = this;
+    Node.call( thisNode );
+
+    var expandedProperty = new Property( options.expanded );
+
+    var meterNode = new MeterNode( pHProperty, expandedProperty );
+    var expandCollapseBar = new ExpandCollapseBar(
+      new Text( pHString, { font: PH_LABEL_FONT, fill: 'white' } ),
+      expandedProperty, {
+        barWidth: meterNode.width,
+        cornerRadius: DISPLAY_CORNER_RADIUS,
+        titleFont: PH_LABEL_FONT,
+        buttonLength: PHScaleConstants.EXPAND_COLLAPSE_BUTTON_LENGTH,
+        xMargin: DISPLAY_X_MARGIN,
+        yMargin: DISPLAY_Y_MARGIN
       } );
-    }
+
+    thisNode.addChild( meterNode );
+    thisNode.addChild( expandCollapseBar );
+
+    expandedProperty.link( function( expanded ) {
+      meterNode.visible = expanded;
+      expandCollapseBar.visible = !expanded;
+    } );
+
+    thisNode.mutate( options );
   }
 
   return inherit( Node, CustomPHMeterNode );
